Fixed overflowing y axis

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html{
     background-color: rgb(54, 54, 63);
     height: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 *{
     box-sizing: border-box;
